--- a/package.json
+++ b/package.json
@@ -2,22 +2,42 @@
   "name": "dummy-amazon",
   "version": "1.0.0",
   "description": "Created dummy-amazon using react",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/imankalyanmandal/dummy-amazon.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/imankalyanmandal/dummy-amazon/issues"
-  },
-  "homepage": "https://github.com/imankalyanmandal/dummy-amazon#readme",
+  "private": true,
   "dependencies": {
-    
+    "chart.js": "^3.7.0",
+    "firebase-tools": "^10.1.4",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "jest": "^27.4.7"
   }
 }
